# PredictionMarketLLM

./: .conflict-files  .env.template  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  prek.toml  pyproject.toml
.auto-resolution/: Makefile  README.md
.auto-resolution/backend/apis/polymarket/: Dockerfile  deployment.yaml  pyproject.toml
.auto-resolution/backend/apis/polymarket/src/models/: ListMarketsRequest.py  ListMarketsResponse.py  RewardRate.py  Rewards.py  ScrapeResponse.py  __init__.py
.auto-resolution/backend/apis/polymarket/src/routes/: __init__.py  health.py
.auto-resolution/backend/embedder/: Embedder.py  __init__.py
.auto-resolution/backend/qdrant/: __init__.py  schema.py
.auto-resolution/backend/tasks/: enqueue.py  get_client.py
.auto-resolution/settings/: __init__.py
.auto-resolution/settings/helpers/: __init__.py  get_secret.py
.claude/skills/add-model-config/: SKILL.md
.conflict-base-0/.github/workflows/: deploy.yml  deploy_apis.yml  deploy_queues.yml  lint.yml
.conflict-base-0/backend/apis/: README.md
.conflict-base-0/backend/crons/: __init__.py
.conflict-base-0/backend/kalshi/: __init__.py
.conflict-base-0/backend/polymarket/: __init__.py
.conflict-base-0/backend/queues/: scrape-markets-polymarket.yaml  solve-market-llm.yaml
.conflict-side-0/backend/crons/: README.md
.conflict-side-0/backend/queues/: README.md
.conflict-side-0/settings/: Settings.py
.conflict-side-1/: .pre-commit-config.yaml  main.py  pyproject.toml
.conflict-side-1/.github/workflows/: deploy_crons.yml
.conflict-side-1/backend/apis/: README.md
.conflict-side-1/backend/apis/llm/: .dockerignore  pyproject.toml
.conflict-side-1/backend/apis/llm/src/classes/providers/: __init__.py
.conflict-side-1/backend/apis/llm/src/models/: __init__.py
.conflict-side-1/backend/apis/llm/src/models/classes/: __init__.py
.conflict-side-1/backend/apis/llm/src/models/classes/providers/: LLMProvider.py
.conflict-side-1/backend/apis/llm/src/prompts/: system.j2
.conflict-side-1/backend/apis/llm/src/routes/: predict.py  ready.py
.conflict-side-1/backend/crons/: prepare-scraping.yaml
.conflict-side-1/backend/queues/: README.md  save-embeddings-markets.yaml
.conflict-side-1/backend/supabase/: __init__.py
.github/: pull_request_template.md
.github/workflows/: deploy-qdrant.yml  deploy.yml  predict_markets.yml  scrape_markets.yml  typecheck.yml
.zed/: settings.json
backend/api_contracts/: PredictRequest.py
backend/apis/: README.md
backend/apis/llm/: Dockerfile  __init__.py  deployment.yaml  main.py  pyproject.toml
backend/apis/llm/src/classes/: PredictorLLM.py
backend/apis/llm/src/classes/providers/: LLMProvider.py  OpenAI.py
backend/apis/llm/src/helpers/: build_possible_results_enum.py
backend/apis/llm/src/models/: LLMRegistry.py  ModelSnapshot.py  __init__.py
backend/apis/llm/src/routes/: embed_market.py  predict.py
backend/apis/orchestrator/: Dockerfile  __init__.py  deployment.yaml  main.py  pyproject.toml  pyrightconfig.json
backend/apis/orchestrator/src/models/: PrepareScrapingResponse.py  __init__.py
backend/apis/orchestrator/src/routes/: __init__.py  prepare_scraping.py
backend/apis/polymarket/: Dockerfile  __init__.py  deployment.yaml  main.py  pyproject.toml
backend/apis/polymarket/src/helpers/: __init__.py  fetch_active_markets.py  fetch_gamma_volume_liquidity.py  get_markets_with_retry.py  scrape.py
backend/apis/polymarket/src/models/: Market.py  MarketsPage.py  Token.py  __init__.py
backend/apis/polymarket/src/routes/: __init__.py  scrape.py
backend/crons/: README.md
backend/crons/predict_markets/: README.md  main.py
backend/crons/scrape_markets/: README.md  __init__.py  main.py
backend/db/: alembic.ini  schema.py
backend/db/alembic/: env.py
backend/db/queries/: __init__.py  deactivate_llm_configs_except.py  get_active_llm_configs.py  get_existing_market_ids.py  get_latest_outcome_price.py  get_llm_config_by_name.py  get_market.py  get_market_outcomes.py
backend/embedder/: Embedder.py
backend/infra/cloud_run_deployer/: Pulumi.prd.yaml  Pulumi.yaml  README.md  __main__.py
backend/observability/: __init__.py  bind_log_context.py  configure_observability.py  trace.py
backend/qdrant/: __init__.py  schema.py  sync.py
backend/queues/: README.md  save-embeddings-markets.yaml  solve-market-llm.yaml
backend/raw_store/: RawStore.py  __init__.py
backend/shared_models/: EmbedMarketRequest.py  ScrapeRequest.py  __init__.py
backend/supabase/: __init__.py  schema.py
backend/tasks/: QUEUE_DISPATCH_DEADLINES.py  __init__.py  enqueue.py
settings/: Settings.py  get_settings.py
(+183 files in other folders)
