[project]
name = "predictionmarketllm"
version = "0.1.0"
description = "Let LLMs play on prediction markets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.3.4",
    "py-clob-client-v2>=1.0.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
