[project]
name = "predictionmarketllm"
version = "0.1.0"
description = "Let LLMs play on prediction markets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-cloud-secret-manager>=2.20",
    "google-cloud-storage>=2.18",
    "jinja2>=3.1.6",
    "openai>=2.0.0",
    "psycopg[binary]>=3.3.4",
    "py-clob-client-v2>=1.0.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.6.0",
    "qdrant-client>=1.10",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ty.src]
exclude = [
    "backend/infra",
    "backend/apis",
    "backend/crons",
    "backend/tasks",
    "backend/qdrant",
    "backend/observability",
]

[tool.ruff]
exclude = [
    "backend/infra",
    "backend/apis",
]
