[project]
name = "polymarket-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    "py-clob-client-v2>=1.0.1",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3",
    "google-cloud-tasks>=2.16",
    "google-cloud-secret-manager>=2.20",
    "tqdm>=4.67",
]
