[project]
name = "llm-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    "openai>=2.0",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3",
    "qdrant-client>=1.10",
    "google-cloud-secret-manager>=2.20",
]
